# demo_network_benchmark

./: Cargo.toml  README.md  flake.nix
bench_tcp_throughput_c2s_server/: system_config.h
bench_tcp_throughput_c2s_server/components/BenchTcpThroughput/src/: BenchTcpThroughput.c
bench_tcp_throughput_c2s_server/plat/nitrogen6sx/: plat_nic.camkes
bench_tcp_throughput_s2c_server/: CMakeLists.txt  README.md  system_config.h
bench_udp_throughput_c2s_server/: BenchUdpThroughput.camkes  CMakeLists.txt  README.md
bench_udp_throughput_c2s_server/components/BenchUdpThroughput/: BenchUdpThroughput.camkes
bench_udp_throughput_c2s_server/plat/nitrogen6sx/: plat_nic.camkes
tcp_throughput_c2s_client/: Cargo.toml
tcp_throughput_c2s_client/src/: main.rs
tcp_throughput_c2s_server/: BenchTcpThroughput.camkes  CMakeLists.txt  README.md  system_config.h
tcp_throughput_c2s_server/components/BenchTcpThroughput/: BenchTcpThroughput.camkes
tcp_throughput_c2s_server/components/BenchTcpThroughput/src/: BenchTcpThroughput.c
tcp_throughput_c2s_server/plat/nitrogen6sx/: plat_nic.camkes
tcp_throughput_s2c_client/: Cargo.toml
tcp_throughput_s2c_client/src/: main.rs
tcp_throughput_s2c_server/: system_config.h
tcp_throughput_s2c_server/components/BenchTcpThroughput/: BenchTcpThroughput.camkes
tcp_throughput_s2c_server/components/BenchTcpThroughput/src/: BenchTcpThroughput.c
tcp_throughput_s2c_server/plat/nitrogen6sx/: plat_nic.cmake
udp_throughput_c2s_client/: Cargo.toml
udp_throughput_c2s_client/src/: main.rs
udp_throughput_c2s_server/: BenchUdpThroughput.camkes  CMakeLists.txt  system_config.h
udp_throughput_c2s_server/components/BenchUdpThroughput/: BenchUdpThroughput.camkes
udp_throughput_c2s_server/components/BenchUdpThroughput/src/: BenchUdpThroughput.c
udp_throughput_c2s_server/plat/nitrogen6sx/: plat_nic.camkes  plat_nic.cmake
