[package]
name = "udp_benchmark_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
bytesize = "1.3.0"
color-eyre = "0.6.2"
humantime = "2.1.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
